fix: canvas should not be sticky on mobile

--- a/app/shape/[shapeId]/pizzaBuilderPage.module.scss
+++ b/app/shape/[shapeId]/pizzaBuilderPage.module.scss
@@ -25,8 +25,13 @@
 }
 
 .stickyCanvasWrapper {
-  position: sticky;
   top: 0;
+
+  & {
+    @media (min-width: 768px) {
+      position: sticky;
+    }
+  }
 }
 
 .toppings {
